# sessionweft

./: .ci-trigger-git-parser  .ci-trigger-hardening-cleanup  .ci-trigger-mcp-compile-fix  .ci-trigger-mcp-import-fix  .ci-trigger-mcp-isolation  .ci-trigger-mcp-sdk  .ci-trigger-metrics-shadow  .ci-trigger-pr54-durable-path  .ci-trigger-security-lock  .ci-trigger-sqlx-audit-fix  .ci-trigger-sqlx-audit-fix-2  .ci-trigger-worktree-path  .gitignore  .tenant-schema-repair-trigger  CONTRIBUTING.md  Cargo.toml  PROJECT.md  README.md  deny.toml
.github/: .execution-identity-trigger  .execution-import-trigger  .execution-test-deps-trigger  .git-conflict-format-trigger  .git-conflict-lockfile-trigger  .git-merge-queue-format-trigger  .git-worktree-prepare-trigger  .merge-gate-refactor-trigger  .merge-gate-refactor-trigger-2  .merge-queue-expect-trigger  .provider-tool-lockfile-trigger  pull_request_template.md
.github/scripts/: cleanup_production_hardening.py  fix_metrics_shadow.py  patch_mcp_initialization_timeout.py  patch_mcp_isolation_slice.py  patch_pr54_worktree_path.py  patch_production_hardening.py  patch_resumable_clients.py  remove_unused_sqlx_mysql.py
.github/workflows/: apply-session-lock-security.yml  ci.yml  cleanup-production-hardening.yml  contributors.yml  diagnose-v0.2.0-publication.yml  execution-normalize-after-ci.yml  expect-merge-queue-audit-context.yml  fix-execution-clippy.yml  fix-execution-identity.yml  fix-execution-test-deps.yml  fix-metrics-shadow.yml  fix-scheduler-test-imports.yml  format-control-plane-operations.yml  format-execution-ready.yml  format-git-conflict-recovery.yml  format-git-merge-queue.yml  format-production-hardening.yml  format-provider-tool-execution.yml  format-scheduler-handover.yml  ga-0.2.0.yml  (+53 more)
apps/sessionweft-cli/: Cargo.toml
apps/sessionweft-cli/src/: main.rs  protocol_cli.rs
apps/sessionweft-saasd/: Cargo.toml
apps/sessionweft-saasd/src/: main.rs
apps/sessionweftd/: Cargo.toml
apps/sessionweftd/src/: client_api.rs  control_plane_api.rs  execution_api.rs  main.rs  scheduler_runtime.rs  standalone_agent.rs
crates/sessionweft-adapter-certification/: Cargo.toml
crates/sessionweft-adapter-certification/src/: lib.rs  main.rs  root.rs
crates/sessionweft-billing/: Cargo.toml
crates/sessionweft-billing-stripe/: Cargo.toml
crates/sessionweft-billing-stripe/src/: lib.rs
crates/sessionweft-billing/src/: lib.rs
crates/sessionweft-client-protocol/: Cargo.toml
crates/sessionweft-client-protocol-sqlite/: Cargo.toml
crates/sessionweft-client-protocol-sqlite/src/: lib.rs
crates/sessionweft-client-protocol-sqlite/tests/: restart.rs
crates/sessionweft-client-protocol/src/: execution.rs  execution_supervisor.rs  journal.rs  lib.rs  model.rs  pty.rs
crates/sessionweft-client-protocol/tests/: pty.rs
crates/sessionweft-control-plane/: Cargo.toml
crates/sessionweft-control-plane/src/: lib.rs
crates/sessionweft-execution/: Cargo.toml
crates/sessionweft-execution-sqlite/: Cargo.toml
crates/sessionweft-execution-sqlite/src/: lib.rs
crates/sessionweft-execution/src/: lib.rs
crates/sessionweft-execution/tests/: approval_expiry.rs  boundary.rs
crates/sessionweft-git/: Cargo.toml
crates/sessionweft-git-local/: Cargo.toml
crates/sessionweft-git-local/src/: lib.rs  merge_execution.rs  merge_execution_tests.rs  root.rs  worktree_mutation.rs
crates/sessionweft-git-sqlite/: Cargo.toml
crates/sessionweft-git-sqlite/src/: lib.rs  merge_execution.rs  merge_queue.rs  root.rs  worktree_mutation.rs
crates/sessionweft-git/src/: lib.rs  merge_execution.rs  merge_queue.rs  root.rs  worktree_mutation.rs
crates/sessionweft-jetstream/: Cargo.toml
crates/sessionweft-jetstream/src/: lib.rs
crates/sessionweft-jetstream/tests/: hardening.rs
crates/sessionweft-knowledge/: Cargo.toml
crates/sessionweft-knowledge-sqlite/: Cargo.toml
crates/sessionweft-knowledge-sqlite/src/: lib.rs
crates/sessionweft-knowledge/src/: lib.rs
crates/sessionweft-knowledge/tests/: hardening.rs
crates/sessionweft-mcp/: Cargo.toml
crates/sessionweft-mcp/src/: approval.rs  isolation.rs  lib.rs  root.rs
crates/sessionweft-mcp/tests/: malicious.rs  validation.rs
crates/sessionweft-orchestration/: Cargo.toml
crates/sessionweft-orchestration/src/: lib.rs
crates/sessionweft-plugin-wasm/: Cargo.toml
crates/sessionweft-plugin-wasm/src/: lib.rs
crates/sessionweft-provider/: Cargo.toml
crates/sessionweft-provider/src/: lib.rs
crates/sessionweft-release-gate/: Cargo.toml
crates/sessionweft-release-gate/src/: lib.rs  main.rs
crates/sessionweft-release-gate/tests/: performance_contracts.rs  postgres_migration.rs  provider_outage.rs
crates/sessionweft-runtime/: Cargo.toml
crates/sessionweft-runtime/src/: lib.rs
crates/sessionweft-runtime/tests/: hardening.rs
crates/sessionweft-saas-postgres/: Cargo.toml
crates/sessionweft-saas-postgres/src/: auth.rs  billing.rs  database.rs  lib.rs  tenancy.rs
crates/sessionweft-saas-postgres/tests/: tenant_isolation.rs
crates/sessionweft-scheduler/: Cargo.toml
crates/sessionweft-scheduler-sqlite/: Cargo.toml
crates/sessionweft-scheduler-sqlite/src/: handover.rs  lib.rs  polling.rs  prerequisite_tests.rs  prerequisites.rs  recovery.rs  root.rs  task_execution.rs  task_execution_queue.rs  task_execution_tests.rs
crates/sessionweft-scheduler/src/: handover.rs  lib.rs  polling.rs  prerequisites.rs  recovery.rs  root.rs  task_execution.rs  task_execution_queue.rs
crates/sessionweft-service-postgres/: Cargo.toml
crates/sessionweft-service-postgres/src/: agent.rs  database.rs  inbox.rs  lib.rs  memory.rs  orchestration.rs  schema.rs  session.rs
crates/sessionweft-service-postgres/tests/: contention.rs  hardening.rs  service_mode.rs
crates/sessionweft-storage/: Cargo.toml
crates/sessionweft-storage/src/: lib.rs
crates/sessionweft-task-runner/: Cargo.toml
crates/sessionweft-task-runner/src/: lib.rs
deploy/: docker-compose.service.yml
docs/: README.md
release/: ga-policy-0.1.0.json  ga-policy-0.2.0.json  phase3-completion-0.2.0.json  release-policy.json
(+156 files in other folders)
