[workspace]
members = [
  "crates/sessionweft-control-plane",
  "crates/sessionweft-core",
  "crates/sessionweft-execution",
  "crates/sessionweft-execution-sqlite",
  "crates/sessionweft-knowledge",
  "crates/sessionweft-knowledge-sqlite",
  "crates/sessionweft-orchestration",
  "crates/sessionweft-orchestration-sqlite",
  "crates/sessionweft-scheduler",
  "crates/sessionweft-scheduler-sqlite",
  "crates/sessionweft-storage",
  "crates/sessionweft-provider",
  "crates/sessionweft-runtime",
  "apps/sessionweftd",
  "apps/sessionweft-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/khovan123/sessionweft"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
