[workspace]
members = [
  "crates/sessionweft-control-plane",
  "crates/sessionweft-core",
  "crates/sessionweft-execution",
  "crates/sessionweft-execution-sqlite",
  "crates/sessionweft-git",
  "crates/sessionweft-git-local",
  "crates/sessionweft-git-sqlite",
  "crates/sessionweft-knowledge",
  "crates/sessionweft-knowledge-sqlite",
  "crates/sessionweft-mcp",
  "crates/sessionweft-mcp-sqlite",
  "crates/sessionweft-orchestration",
  "crates/sessionweft-orchestration-sqlite",
  "crates/sessionweft-scheduler",
  "crates/sessionweft-scheduler-sqlite",
  "crates/sessionweft-task-runner",
  "crates/sessionweft-storage",
  "crates/sessionweft-provider",
  "crates/sessionweft-runtime",
  "crates/sessionweft-workspace-intelligence",
  "crates/sessionweft-service-postgres",
  "crates/sessionweft-jetstream",
  "apps/sessionweftd",
  "apps/sessionweft-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/khovan123/sessionweft"

[workspace.dependencies]
anyhow = "1"
async-nats = { version = "0.50", default-features = false, features = ["ring", "jetstream"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros"] }
bytes = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "2.2", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "json", "derive"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tree-sitter = "0.25.10"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
uuid = { version = "1", features = ["serde", "v4"] }
