[package]
name = "sessionweft"
default-run = "sessionweft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sessionweft-client-protocol = { path = "../../crates/sessionweft-client-protocol" }
tokio.workspace = true
uuid.workspace = true
