[package]
name = "sessionweftd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sessionweft-control-plane = { path = "../../crates/sessionweft-control-plane" }
sessionweft-core = { path = "../../crates/sessionweft-core" }
sessionweft-execution = { path = "../../crates/sessionweft-execution" }
sessionweft-execution-sqlite = { path = "../../crates/sessionweft-execution-sqlite" }
sessionweft-knowledge = { path = "../../crates/sessionweft-knowledge" }
sessionweft-knowledge-sqlite = { path = "../../crates/sessionweft-knowledge-sqlite" }
sessionweft-orchestration = { path = "../../crates/sessionweft-orchestration" }
sessionweft-orchestration-sqlite = { path = "../../crates/sessionweft-orchestration-sqlite" }
sessionweft-provider = { path = "../../crates/sessionweft-provider" }
sessionweft-runtime = { path = "../../crates/sessionweft-runtime" }
sessionweft-storage = { path = "../../crates/sessionweft-storage" }
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
