[package]
name = "sessionweftd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
sessionweft-client-protocol = { path = "../../crates/sessionweft-client-protocol" }
sessionweft-client-protocol-sqlite = { path = "../../crates/sessionweft-client-protocol-sqlite" }
sessionweft-control-plane = { path = "../../crates/sessionweft-control-plane" }
sessionweft-core = { path = "../../crates/sessionweft-core" }
sessionweft-execution = { path = "../../crates/sessionweft-execution" }
sessionweft-execution-sqlite = { path = "../../crates/sessionweft-execution-sqlite" }
sessionweft-git = { path = "../../crates/sessionweft-git" }
sessionweft-git-local = { path = "../../crates/sessionweft-git-local" }
sessionweft-git-sqlite = { path = "../../crates/sessionweft-git-sqlite" }
sessionweft-knowledge = { path = "../../crates/sessionweft-knowledge" }
sessionweft-knowledge-sqlite = { path = "../../crates/sessionweft-knowledge-sqlite" }
sessionweft-orchestration = { path = "../../crates/sessionweft-orchestration" }
sessionweft-orchestration-sqlite = { path = "../../crates/sessionweft-orchestration-sqlite" }
sessionweft-observability = { path = "../../crates/sessionweft-observability" }
sessionweft-provider = { path = "../../crates/sessionweft-provider" }
sessionweft-runtime = { path = "../../crates/sessionweft-runtime" }
sessionweft-scheduler = { path = "../../crates/sessionweft-scheduler" }
sessionweft-scheduler-sqlite = { path = "../../crates/sessionweft-scheduler-sqlite" }
sessionweft-storage = { path = "../../crates/sessionweft-storage" }
sessionweft-task-runner = { path = "../../crates/sessionweft-task-runner" }
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
