[package]
name = "sessionweft-billing-stripe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
hex = "0.4"
hmac = "0.12"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sessionweft-billing = { path = "../sessionweft-billing" }
sessionweft-tenancy = { path = "../sessionweft-tenancy" }
sha2 = "0.10"
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
