[package]
name = "sessionweft-billing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sessionweft-tenancy = { path = "../sessionweft-tenancy" }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
