[package]
name = "sessionweft-client-protocol-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
sessionweft-client-protocol = { path = "../sessionweft-client-protocol" }
sessionweft-core = { path = "../sessionweft-core" }
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
