[package]
name = "sessionweft-client-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
sessionweft-core = { path = "../sessionweft-core" }
sessionweft-runtime = { path = "../sessionweft-runtime" }
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
