[package]
name = "sessionweft-execution-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
sessionweft-core = { path = "../sessionweft-core" }
sessionweft-execution = { path = "../sessionweft-execution" }
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
