[package]
name = "sessionweft-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.clippy]
derivable_impls = "allow"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sessionweft-core = { path = "../sessionweft-core" }
sessionweft-orchestration = { path = "../sessionweft-orchestration" }
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
