[package]
name = "sessionweft-git-local"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/root.rs"

[dependencies]
async-trait.workspace = true
sessionweft-git = { path = "../sessionweft-git" }
tokio.workspace = true

[dev-dependencies]
chrono.workspace = true
sessionweft-core = { path = "../sessionweft-core" }
uuid.workspace = true
