[package]
name = "sessionweft-git-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/root.rs"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
sessionweft-core = { path = "../sessionweft-core" }
sessionweft-git = { path = "../sessionweft-git" }
sessionweft-orchestration = { path = "../sessionweft-orchestration" }
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
sessionweft-git-local = { path = "../sessionweft-git-local" }
sessionweft-orchestration-sqlite = { path = "../sessionweft-orchestration-sqlite" }
