[package]
name = "sessionweft-knowledge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
sessionweft-core = { path = "../sessionweft-core" }
thiserror.workspace = true
uuid.workspace = true
