[package]
name = "sessionweft-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
test = false

[lints.clippy]
derivable_impls = "allow"

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
rmcp.workspace = true
serde_json.workspace = true
sessionweft-execution = { path = "../sessionweft-execution" }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
serde.workspace = true
