[package]
name = "sessionweft-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
sessionweft-core = { path = "../sessionweft-core" }
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
