[package]
name = "sessionweft-saas-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
sessionweft-billing = { path = "../sessionweft-billing" }
sessionweft-tenancy = { path = "../sessionweft-tenancy" }
sha2 = "0.10"
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
