[package]
name = "sessionweft-scheduler-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
sessionweft-core = { path = "../sessionweft-core" }
sessionweft-execution = { path = "../sessionweft-execution" }
sessionweft-orchestration = { path = "../sessionweft-orchestration" }
sessionweft-scheduler = { path = "../sessionweft-scheduler" }
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
sessionweft-execution-sqlite = { path = "../sessionweft-execution-sqlite" }
sessionweft-orchestration-sqlite = { path = "../sessionweft-orchestration-sqlite" }
