[package]
name = "sessionweft-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
sessionweft-core = { path = "../sessionweft-core" }
sessionweft-orchestration = { path = "../sessionweft-orchestration" }
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
