[package]
name = "sessionweft-task-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
sessionweft-core = { path = "../sessionweft-core" }
sessionweft-provider = { path = "../sessionweft-provider" }
sessionweft-scheduler = { path = "../sessionweft-scheduler" }
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
sessionweft-execution = { path = "../sessionweft-execution" }
uuid.workspace = true
